--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# System files
+.DS_Store
+
+# Build
+dist
+
 # Logs
 logs
 *.log
@@ -56,4 +62,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
