--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "storybook-markdown-decorator",
   "description": "Decorator for quickly using Markdown to annotate your React components",
   "version": "1.0.6",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/idmontie/storybook-markdown-decorator",
   "author": "Ivan Montiel",
   "license": "MIT",
-  "main": "dist/index.js",
   "files": [
     "dist"
   ],
@@ -25,7 +24,12 @@
     "babel-register": "^6.26.0"
   },
   "peerDependencies": {
+    "@storybook/addon-links": "^3.2.6",
+    "@storybook/react": "^3.2.8",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-markdown": "^2.5.0",
+    "storybook-markdown-decorator": "^1.0.6"
   }
 }
